Added GenResponse module

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-IMG_FETCH_MODULE/node_modules/
-sincere-song-448114-h6-f3e0278e3b00.json
+backend/IMG_FETCH_MODULE/node_modules
+backend/sincere-song-448114-h6-f3e0278e3b00.json
+backend/GEN_RESPONSE/.env
+backend/GEN_RESPONSE/venv
