--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ backend/IMG_FETCH_MODULE/node_modules
 backend/sincere-song-448114-h6-f3e0278e3b00.json
 backend/GEN_RESPONSE/.env
 backend/GEN_RESPONSE/venv
+backend/GEN_RESPONSE/__pycache__
+backend/GEN_RESPONSE/sincere-song-448114-h6-f3e0278e3b00.json
