--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ backend/GEN_RESPONSE/.env
 backend/GEN_RESPONSE/venv
 backend/GEN_RESPONSE/__pycache__
 backend/GEN_RESPONSE/sincere-song-448114-h6-f3e0278e3b00.json
+backend/GEN_RESPONSE/*.json
