--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-backend/IMG_FETCH_MODULE/node_modules
+backend/FETCH_GOOGLE_IMGS/node_modules
 backend/sincere-song-448114-h6-f3e0278e3b00.json
 backend/GEN_RESPONSE/.env
 backend/GEN_RESPONSE/venv
 backend/GEN_RESPONSE/__pycache__
 backend/GEN_RESPONSE/sincere-song-448114-h6-f3e0278e3b00.json
 backend/GEN_RESPONSE/*.json
+backend/GEN_RESPONSE/sincere-song-448114-h6-c6b9c32362d6.json
+backend/sincere-song-448114-h6-c6b9c32362d6.json
