--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ dist
 dist-ssr
 *.local
 
+.env
+backend/json_files
+backend/uploads
+
+venv/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
