--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pdfjs-dist": "^4.0.379",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^7.7.1"
   },
   "devDependencies": {
