--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -59,3 +59,9 @@ typing_extensions==4.12.2
 urllib3==2.3.0
 uuid6==2024.7.10
 uvicorn==0.34.0
+
+openai==1.68.2
+distro==1.9.0
+jiter==0.9.0
+tqdm==4.67.1
+pydantic-core==2.27.2
