--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.344.0",
     "pdfjs-dist": "^4.0.379",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/node": "^22.13.14",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
     "@types/react-pdf": "^7.0.0",
